done page without medias

--- a/index.html
+++ b/index.html
@@ -4,24 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/dist/main.min.css">
     <title>Document</title>
 </head>
 <body>
     <div class="wrapper">
         <ul class="row">
-            <li>
+            <li class="row-item">
                 <figure>
-                    <figcaption></figcaption>
+                    <img src="img/blue.jpg" alt="image">
+                    <div class="stars">
+                        <div class="star blackstar"></div>
+                        <div class="star blackstar"></div>
+                        <div class="star blackstar"></div>
+                        <div class="star graystar"></div>
+                        <div class="star graystar"></div>
+                    </div>
+                    <figcaption>
+                        <h2>
+                            New zealand timelaps
+                        </h2>
+                        <p>
+                            Equipé de son appareil Canon 5D Mark II, le réalis ateur Bevan Percival nous offre une nouvelle vidéo en  technique timelapse absolument magnifique
+                        </p>
+                    </figcaption>
                 </figure>
             </li>
-            <li>
+            <li class="row-item">
                 <figure>
-                    <figcaption></figcaption>
+                    <img src="img/orange.jpg" alt="image">
+                    <div class="stars">
+                        <div class="star blackstar"></div>
+                        <div class="star blackstar"></div>
+                        <div class="star blackstar"></div>
+                        <div class="star graystar"></div>
+                        <div class="star graystar"></div>
+                    </div>
+                    <figcaption>
+                        <h2>
+                            New zealand timelaps
+                        </h2>
+                        <p>
+                            Equipé de son appareil Canon 5D Mark II, le réalis ateur Bevan Percival nous offre une nouvelle vidéo en  technique timelapse absolument magnifique
+                        </p>
+                    </figcaption>
                 </figure>
             </li>
-            <li>
+            <li class="row-item">
                 <figure>
-                    <figcaption></figcaption>
+                    <img src="img/purple.jpg" alt="image">
+                    <div class="stars">
+                        <div class="star blackstar"></div>
+                        <div class="star blackstar"></div>
+                        <div class="star blackstar"></div>
+                        <div class="star graystar"></div>
+                        <div class="star graystar"></div>
+                    </div>
+                    <figcaption>
+                        <h2>
+                            New zealand timelaps
+                        </h2>
+                        <p>
+                            Equipé de son appareil Canon 5D Mark II, le réalis ateur Bevan Percival nous offre une nouvelle vidéo en  technique timelapse absolument magnifique
+                        </p>
+                    </figcaption>
                 </figure>
             </li>
         </ul>
